--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.21.0",
     "lucide-react": "^0.483.0",
+    "moment": "^2.30.1",
     "motion": "^12.5.0",
     "next": "15.2.3",
     "openai": "^4.89.0",
