--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@stackframe/stack": "^2.7.27",
     "class-variance-authority": "^0.7.1",
@@ -22,6 +23,8 @@
     "openai": "^4.89.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-markdown": "^8.0.7",
+    "react-webcam": "^7.2.0",
     "recordrtc": "^5.5.1",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4"
